--- a/index.html
+++ b/index.html
@@ -71,31 +71,35 @@
      <!-- Synopsis -->
      <section class="story" id="story">
           <article>
-          <h1>Learn about Discovering Eternity</h1>
-          <p>The world has always been composed of four region. The supreme militant-driven nation to the west, the
-               traditional
-               magical academy to the east, the crime driven slum of the south, and technological advance metropolis of
-               the
-               north. In attempt to promote unification of the four nations, young Kari was selected to join a squad of
-               explorers
-               with three other young adults from the remaining three regions. The group makes a discovery of a
-               lifetime,
-               and
-               ancient civilization predating all four nations. As her group returns to report their discover she finds
-               one
-               of
-               their fellow members dead, with her and two other explorers as the prime suspect.</p>
-               </article>
+               <h1>Learn about Discovering Eternity</h1>
+               <p>The world has always been composed of four region. The supreme militant-driven nation to the west,
+                    the
+                    traditional
+                    magical academy to the east, the crime driven slum of the south, and technological advance
+                    metropolis of
+                    the
+                    north. In attempt to promote unification of the four nations, young Kari was selected to join a
+                    squad of
+                    explorers
+                    with three other young adults from the remaining three regions. The group makes a discovery of a
+                    lifetime,
+                    and
+                    ancient civilization predating all four nations. As her group returns to report their discover she
+                    finds
+                    one
+                    of
+                    their fellow members dead, with her and two other explorers as the prime suspect.</p>
+          </article>
      </section>
 
      <!-- Customer testimonials -->
      <center>
-     <p>Finally, an author that is not boring… - teenage kid
-          <br />
-          A riveting story that will captivate you! - book critic
-          <br />
-          I want to know what happens next! - reader</p>
-</center>
+          <p>Finally, an author that is not boring… - teenage kid
+               <br />
+               A riveting story that will captivate you! - book critic
+               <br />
+               I want to know what happens next! - reader</p>
+     </center>
      <div class="parallax-1"></div>
 
      <!-- Character & World -->
@@ -191,8 +195,8 @@
                     scout, a
                     foreman, a navagator, and her the record keeper.
                </p>
-                    <br />
-                  <p>Viv the other girl from the group came from the southern region. While they were both female, the
+               <br />
+               <p>Viv the other girl from the group came from the southern region. While they were both female, the
                     similarities end
                     there. Where as Kari preferred planing for her action, Viv base her on actions on instincts without
                     any
@@ -231,8 +235,8 @@
                     where
                     kleptomania
                     as a common trait among their people.</p>
-                    <br />
-                    <p>Arnold the representative from the west was the foreman and in charge of supplies, and begun to
+               <br />
+               <p>Arnold the representative from the west was the foreman and in charge of supplies, and begun to
                     order
                     the
                     other
@@ -266,8 +270,8 @@
                     that
                     today
                     his energy was focus on the final member Garret for avoiding his duty.</p>
-                    <br />
-                    <p>Garret, the representative from the East, just shrug when Arnold growered him on, as if he were a
+               <br />
+               <p>Garret, the representative from the East, just shrug when Arnold growered him on, as if he were a
                     mutt
                     barking at him. Garret was the lazy one, who. There is in fact such a thing as being too passive.
                     Kari
@@ -278,8 +282,8 @@
                     decorum
                     were
                     that of a hermit.</p>
-                    <br />
-                    <p>All three of them had an ego, and Kari knows that she had one also. Arrogant, judgimental, and
+               <br />
+               <p>All three of them had an ego, and Kari knows that she had one also. Arrogant, judgimental, and
                     obsessive
                     is
                     what
@@ -328,36 +332,37 @@
      <!-- Contact Form -->
      <div class="row">
           <center>
-          <div class="col-lg-8 mb-4">
-               <h1>Send James a Message</h1>
-               <form name="sentMessage" id="contactForm" novalidate>
-                    <div class="control-group form-group">
-                         <div class="controls">
-                              <label>Full Name:</label>
-                              <input type="text" class="form-control" id="name" required
-                                   data-validation-required-message="Please enter your name.">
-                              <p class="help-block"></p>
+               <div class="col-lg-8 mb-4">
+                    <h1>Send James a Message</h1>
+                    <form name="sentMessage" id="contactForm" novalidate>
+                         <div class="control-group form-group">
+                              <div class="controls">
+                                   <label>Full Name:</label>
+                                   <input type="text" class="form-control" id="name" required
+                                        data-validation-required-message="Please enter your name.">
+                                   <p class="help-block"></p>
+                              </div>
                          </div>
-                    </div>
-                    <div class="control-group form-group">
-                         <div class="controls">
-                              <label>Email Address:</label>
-                              <input type="email" class="form-control" id="email" required
-                                   data-validation-required-message="Please enter your email address.">
+                         <div class="control-group form-group">
+                              <div class="controls">
+                                   <label>Email Address:</label>
+                                   <input type="email" class="form-control" id="email" required
+                                        data-validation-required-message="Please enter your email address.">
+                              </div>
                          </div>
-                    </div>
-                    <div class="control-group form-group">
-                         <div class="controls">
-                              <label>Message:</label>
-                              <textarea rows="10" cols="100" class="form-control" id="message" required
-                                   data-validation-required-message="Please enter your message" maxlength="999" style="resize:none"></textarea>
+                         <div class="control-group form-group">
+                              <div class="controls">
+                                   <label>Message:</label>
+                                   <textarea rows="10" cols="100" class="form-control" id="message" required
+                                        data-validation-required-message="Please enter your message" maxlength="999"
+                                        style="resize:none"></textarea>
+                              </div>
                          </div>
-                    </div>
-                    <div id="success"></div>
-                    <!-- For success/fail messages -->
-                    <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
-               </form>
-          </div>
+                         <div id="success"></div>
+                         <!-- For success/fail messages -->
+                         <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
+                    </form>
+               </div>
           </center>
      </div>
      <!-- Share link -->
