--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
+
      <!-- Navigation bar -->
      <nav class="navbar fixed-top navbar-expand-lg navbar-dark fixed-top" style="background-color:rgba(0, 0, 0, 0.75);">
           <div class="container">
@@ -54,8 +55,10 @@
      </nav>
 
      <header>
-          <h2>“If the book is true, it will find an audience that is meant to read it.”</h1>
+          <center>
+               <h1>“If the book is true, it will find an audience that is meant to read it.”</h1>
                <h3> — Wally Lamb</h3>
+          </center>
      </header>
 
      <div class="parallax-1"></div>
@@ -70,7 +73,7 @@
 
      <!-- Synopsis -->
      <section class="story" id="story">
-          <article>
+          <Center>
                <h1>Learn about Discovering Eternity</h1>
                <p>The world has always been composed of four region. The supreme militant-driven nation to the west,
                     the
@@ -89,7 +92,7 @@
                     one
                     of
                     their fellow members dead, with her and two other explorers as the prime suspect.</p>
-          </article>
+          </Center>
      </section>
 
      <!-- Customer testimonials -->
