--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           crossorigin="anonymous">
      <link rel="stylesheet" href="main.css">
      <link rel="apple-touch-icon" href="apple-touch-icon.png" type="image/x-icon">
-     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-     <link rel="icon" href="/favicon.ico" type="image/x-icon">
+     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+     <link rel="icon" href="favicon.ico" type="image/x-icon">
      <script src="text-speech.js"></script>
 </head>
 
