--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
           <h1>About the Author</h1>
           <div class="row">
                <div class="col-sm-3">
-                    <img class="img-fluid rounded-circle" src="/images/me.jpg" alt="Author">
+                    <img class="img-fluid rounded-circle" src="images/me.jpg" alt="Author">
                </div>
                <div class="col-sm-9">
                     James Chen is a creative content specialist who is studying web development at Seattle University.
