Add more pic and fixes

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
      <header>
           <center>
+               <img class="title" src="images/header.png">
                <h1>“If the book is true, it will find an audience that is meant to read it.”</h1>
                <h3> — Wally Lamb</h3>
           </center>
@@ -111,24 +112,24 @@
           <div class="container">
                <div class="row">
                     <div class="col-sm-3">
-                         <img class="img-fluid rounded-circle" src="https://via.placeholder.com/250" alt="Character 1">
-                         <h3>Character 1</h3>
+                         <img class="img-fluid rounded-circle" src="images/kari.jpg" alt="Kari">
+                         <h3>Kari</h3>
+                         <p>North</p>
+                    </div>
+                    <div class="col-sm-3">
+                         <img class="img-fluid rounded-circle" src="images/garret.jpg" alt="Garret">
+                         <h3>Garret</h3>
                          <p>East</p>
                     </div>
                     <div class="col-sm-3">
-                         <img class="img-fluid rounded-circle" src="https://via.placeholder.com/250" alt="Character 2">
-                         <h3>Character 2</h3>
+                         <img class="img-fluid rounded-circle" src="images/viv.jpg" alt="Viv">
+                         <h3>Viv</h3>
                          <p>South</p>
                     </div>
                     <div class="col-sm-3">
-                         <img class="img-fluid rounded-circle" src="https://via.placeholder.com/250" alt="Character 3">
-                         <h3>Character 3</h3>
+                         <img class="img-fluid rounded-circle" src="images/arnold.jpg" alt="Arnold">
+                         <h3>Arnold</h3>
                          <p>West</p>
-                    </div>
-                    <div class="col-sm-3">
-                         <img class="img-fluid rounded-circle" src="https://via.placeholder.com/250" alt="Character 4">
-                         <h3>Character 4</h3>
-                         <p>North</p>
                     </div>
                </div>
           </div>
