--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
      <header>
           <center>
                <img class="title" src="images/header.png">
-               <h1>“If the book is true, it will find an audience that is meant to read it.”</h1>
+               <h2>“If the book is true, it will find an audience that is meant to read it.”</h2>
                <h3> — Wally Lamb</h3>
           </center>
      </header>
@@ -76,33 +76,34 @@
      <section class="story" id="story">
           <Center>
                <h1>Learn about Discovering Eternity</h1>
-               <p>The world has always been composed of four region. The supreme militant-driven nation to the west,
+               <p>The world has always been composed of four regions. The supreme militant driven nation of the west,
                     the
-                    traditional
-                    magical academy to the east, the crime driven slum of the south, and technological advance
+                    traditional mage academy of the east, the crime driven slum of the south, and the technological
+                    advance
                     metropolis of
                     the
-                    north. In attempt to promote unification of the four nations, young Kari was selected to join a
+                    north. In the attempt to promote unification between the four nations, young Kari was selected to
+                    join a
                     squad of
-                    explorers
-                    with three other young adults from the remaining three regions. The group makes a discovery of a
+                    explorers from the other three regions. The group of explorers makes the discovery of a
                     lifetime,
-                    and
-                    ancient civilization predating all four nations. As her group returns to report their discover she
+                    an
+                    ancient civilization predating all four nations. As her group returns to report their discovery
+                    Kari
                     finds
                     one
                     of
-                    their fellow members dead, with her and two other explorers as the prime suspect.</p>
+                    their fellow member murdered, with only her and the two other explorers as the prime suspect.</p>
           </Center>
      </section>
 
      <!-- Customer testimonials -->
      <center>
-          <p>Finally, an author that is not boring… - teenage kid
+          <p>Finally, an author that is not boring - teenage kid
                <br />
-               A riveting story that will captivate you! - book critic
+               A riveting story that will captivate you - book critic
                <br />
-               I want to know what happens next! - reader</p>
+               I want to know what happens next - reader</p>
      </center>
      <div class="parallax-1"></div>
 
@@ -113,23 +114,23 @@
                <div class="row">
                     <div class="col-sm-3">
                          <img class="img-fluid rounded-circle" src="images/kari.jpg" alt="Kari">
-                         <h3>Kari</h3>
-                         <p>North</p>
+                         <h4>Kari</h4>
+                         <h5>The record keeper</h5>
                     </div>
                     <div class="col-sm-3">
                          <img class="img-fluid rounded-circle" src="images/garret.jpg" alt="Garret">
-                         <h3>Garret</h3>
-                         <p>East</p>
+                         <h4>Garret</h4>
+                         <h5>The navagator</h5>
                     </div>
                     <div class="col-sm-3">
                          <img class="img-fluid rounded-circle" src="images/viv.jpg" alt="Viv">
-                         <h3>Viv</h3>
-                         <p>South</p>
+                         <h4>Viv</h4>
+                         <h5>The scout</h5>
                     </div>
                     <div class="col-sm-3">
                          <img class="img-fluid rounded-circle" src="images/arnold.jpg" alt="Arnold">
-                         <h3>Arnold</h3>
-                         <p>West</p>
+                         <h4>Arnold</h4>
+                         <h5>The foreman</h5>
                     </div>
                </div>
           </div>
@@ -139,23 +140,23 @@
                <div class="row">
                     <div class="col-sm-3">
                          <img class="img-fluid rounded-circle" src="images/north.jpg" alt="North">
-                         <h3>Nation 1</h3>
-                         <p>North</p>
+                         <h4>Serenity</h4>
+                         <h5>Metropolis of the north</h5>
                     </div>
                     <div class="col-sm-3">
                          <img class="img-fluid rounded-circle" src="images/east.jpg" alt="East">
-                         <h3>Nation 2</h3>
-                         <p>East</p>
+                         <h4>Genesis</h4>
+                         <h5>Academy of the east</h5>
                     </div>
                     <div class="col-sm-3">
                          <img class="img-fluid rounded-circle" src="images/south.jpg" alt="South">
-                         <h3>Nation 3</h3>
-                         <p>South</p>
+                         <h4>Haven</h4>
+                         <h5>Slum of the south</h5>
                     </div>
                     <div class="col-sm-3">
                          <img class="img-fluid rounded-circle" src="images/west.jpg" alt="West">
-                         <h3>Nation 4</h3>
-                         <p>West</p>
+                         <h4>Bitzenburg</h4>
+                         <h5>Fort of the West</h5>
                     </div>
                </div>
           </div>
@@ -176,58 +177,62 @@
           </div>
           <article>
                <h1>Chapter 1</h1>
-               <p>They were a bad match. Kari had knew that when she first the other members of her group from other
-                    regions
+               <p>They were a bad match. Kari had knew that when she first met the other members of her group. They had
+                    all hail from other
+                    regions of the land
                     for a
-                    long expedition of exploring the unknown jungle that flourished in the deep crater of the land. The
+                    long expedition. Their quest was to explore the unknown jungle that flourished in the deep crater
+                    of the land. The
                     crater
-                    was in
-                    the middle of each of their regions untamed and untouched by any hint of civilization. It had been
+                    was located
+                    in the middle of all four regions. Untamed and untouched by any hint of civilization. It had been
                     a
                     month
                     since
-                    they have explored the region together and they have yet yield any significant discovery except
+                    they have explored the region together and they have yet yielded any significant discovery except
                     extending the
                     topography.
-                    The group composed of a representative from other regions of the world, each of them a hand chosen
-                    talent
-                    being
-                    picked among many to be part of this group. With that honor, came a sense of superiority. All of
+                    The group composed of a representative from each major region of the world, each of them are a hand
+                    chosen
+                    talent who is
+                    picked among many to be part of this group. With that honor, came a sense of superiority. Each of
                     them
-                    had an
-                    attitude, and their personality constantly clashed on a daily basis. Their speciality consist of a
-                    scout, a
-                    foreman, a navagator, and her the record keeper.
+                    developed had a distinct character, and their personality clashed on a daily basis.
                </p>
                <br />
-               <p>Viv the other girl from the group came from the southern region. While they were both female, the
-                    similarities end
-                    there. Where as Kari preferred planing for her action, Viv base her on actions on instincts without
+               <p>Viv was the other young woman the group, who came from the southern region. While they were both
+                    female, the
+                    similarities ends
+                    there. Where as Kari preferred planing for her action in advance, Viv base her on actions on
+                    instincts without
                     any
                     basis
                     or
-                    reasoning. What makes Viv hard to deal with is her spontaneity and selfishness. Just a week ago Viv
+                    reasoning. In Kari's opinion, what makes Viv hard to deal with is her spontaneity and selfishness.
+                    Just a week ago Viv
                     lead
                     them down
                     the
                     path
-                    that was treacherous to all but most lithe human, namely only her. “A short cut” she casually
+                    that was treacherous to all but most lithe human, namely only Viv herself. “A short cut” the
+                    light-footed girl casually
                     remarked
                     as she
                     leap
-                    from one foothold to another as Kari “almost slip” far too many times to any person's liking. In
+                    from one foothold to another as Kari “almost slip” far too many times trying to catch up. In
                     the end
                     Kari and
                     the
-                    others demanded that Viv find them a safer route, but not before receiving the look from Viv. It
+                    others demanded that Viv find them a safer route, but not before receiving a look from Viv. Kari
+                    recognized that look, it
                     was the
                     look
-                    you give to other people when you see them as incompetent. But what really draw the line between
+                    you give to other people when you see them as incompetent. But what really drew the line between
                     the two
                     young woman, was when Viv decided to
                     make
                     Kari her
-                    mark. Kari had a necklace given to her by mother on her birthday. Viv and her cat-like eyes on it,
+                    mark. Kari had a necklace given to her by mother on her birthday. Viv had her cat-like eyes on it,
                     the
                     moment
                     they
@@ -235,74 +240,82 @@
                     the
                     middle
                     of
-                    nowhere, it narrows down the list of suspect to three with only one of them coming from a nation
+                    nowhere, it narrows the list of suspect down to three with only one of them hailing from a nation
                     where
                     kleptomania
-                    as a common trait among their people.</p>
+                    as a common known trait among their people.</p>
                <br />
-               <p>Arnold the representative from the west was the foreman and in charge of supplies, and begun to
-                    order
+               <p>Arnold was the representative from the west and also the foreman and in charge of their supplies.
+                    From the start, he had
+                    ordered
                     the
-                    other
-                    three members as if they were in the military corp. What he failed to understand was none of them
+                    others as if they were in the military corp. What he failed to understand in Kari’s opinion was
+                    none of them
                     came
                     from
-                    military, and none of them respond well with bellowing and spit droplets landing on their face when
+                    Military. None of them responds well with bellowing and spit droplets landing on their face when
                     he
-                    came
-                    to
-                    close to their face. Now that Kari thought about it perhaps all this barking and chest pounding was
+                    Came just an inch to their face. Now that Kari thought about it perhaps all this growling and chest
+                    pounding was
                     needed
-                    for
-                    him, as Arnold had never resorted to physicals force to her. But it was certainly not by choice, he
+                    For the man to vent, as Arnold had never resorted to physical force with any of them, but it was
+                    certainly not by choice. While he had the ability to do so, Arnold
                     was
                     given
                     specific instructions that he was not to harm any of the members to risk international conflict.
                     They
                     all
                     were
-                    instructed the same. Whenever Kari questioned his methodology, she could see it took every strain
+                    instructed the same, they must avoid conflict at all cost. There was a time Kari questioned his
+                    leadership in front of the others, and she could see it took every strain
                     of
                     muscle
-                    on his
-                    body to hold back the urge to resort to violence, which she no doubt is second nature to him. Kari
+                    on Arnold’s
+                    body to hold back the urge to resort to violence, which she does not doubt is second nature to him.
+                    Kari
                     was
                     not
-                    afraid,
+                    Afraid,
                     all she saw was a overbearingly man, whose only methodology was using force to get obedience. It
                     seem
                     that
                     today
-                    his energy was focus on the final member Garret for avoiding his duty.</p>
+                    his energy was focus on the final member Garret for slacking off on his camp duty.</p>
                <br />
-               <p>Garret, the representative from the East, just shrug when Arnold growered him on, as if he were a
-                    mutt
-                    barking at him. Garret was the lazy one, who. There is in fact such a thing as being too passive.
+               <p>Garret, the representative from the East, just shrug when Arnold berated him. To Garret the larger
+                    man must seem like a cage beast behind bars. Garret was the apathic one, in Kari’s opinion. While the
+                    other two members had a strong personality, there was in fact, such a thing as being too passive.
                     Kari
                     could
                     not
-                    figure out what the lanky man’s thoughts were. Garret was indeed a savant at mapping, but with
+                    figure out what the lanky man’s thoughts were as she worked with him. Garret was indeed a savant at
+                    mapping, but his
                     social
                     decorum
                     were
-                    that of a hermit.</p>
+                    that of a hermit. There was one time when Kari was taking care of her business in a fair distance
+                    from camp. The man walk by, stared at her a moment, nodded to her, and walked off as if nothing
+                    eventful had happen. Even to this day Kari did not know what to make of that, or how should she
+                    have dealt with the matter as she blushed at the memory.</p>
                <br />
-               <p>All three of them had an ego, and Kari knows that she had one also. Arrogant, judgimental, and
+               <p>All three of them had an ego, and Kari knows that she had one also. Arrogant, judgemental, and
                     obsessive
                     is
                     what
-                    her colleague had described her non too discreetly behind her back. She is aware of her flaw, and
+                    her colleague had described her none too discreetly behind her back. She was aware of her flaw, and
                     was
                     trying
                     to
-                    repress her nature for the sake of teamwork. That however could not be applied to the rest of the
+                    repress her nature for the sake of teamwork. That however, could not be applied to the rest of her
                     team
                     mates.
                     With
                     each passing day with only each other as company. She was convinced that one of them was going to
+                    secretly
                     smoother
                     them in
-                    their sleep and call it an accident. If this continues she may be the one that does the smothering.
+                    their sleep and report it as an accident. If she has to endure this misfit’s company for another
+                    month, she may be the one that does the deed to end this journey.
                </p>
           </article>
      </section>
